--- a/diary/html/manage_users.html
+++ b/diary/html/manage_users.html
@@ -45,7 +45,7 @@
       <div id="button_manage_articles">
         <div id="child_button_manage_articles">
           <i class="fa-solid fa-book-open"></i>
-          <span id="span_manage_users">Manage articles</span>
+          <span id="span_manage_articles">Manage articles</span>
         </div>
       </div>
     </a>
@@ -53,7 +53,7 @@
     <div id="button_logout">
       <div id="child_button_logout">
         <i class="fa-solid fa-right-from-bracket"></i>
-        <span id="span_manage_users">Log out</span>
+        <span id="span_manage_logout">Log out</span>
       </div>
     </div>
 
@@ -88,7 +88,7 @@
 
     <div id="pagination">
       <a href="#" id="previous">← Previous</a>
-      <div id="page-numbers">
+      <div id="page_numbers">
         <a href="#" class="active">1</a>
         <a href="#">2</a>
         <a href="#">3</a>
@@ -98,6 +98,6 @@
       </div>
       <a href="#" id="next">Next →</a>
     </div>
-    <script src="../js/managa_users.js"></script>
+    <script src="../js/manage_users.js"></script>
   </body>
 </html>
