--- a/diary/html/category_manage.html
+++ b/diary/html/category_manage.html
@@ -57,39 +57,71 @@
       </div>
     </div>
 
-    <div id="search_manage">
+    <div id="search_manage_category">
       <label>
         <div>
           <i class="fa-solid fa-magnifying-glass"></i>
           <span>Search</span>
         </div>
-        <input type="text" id="input_search_manage" placeholder="Search..." />
+        <input
+          type="text"
+          id="input_search_manage_category"
+          placeholder="Search..."
+        />
       </label>
     </div>
 
-    <div id="add_category">
-      <div>
-        <h3>📂 Manage Categories</h3>
-        <label for="input_add_category_name" id="label_input_add_category_name"
-          >Category Name:</label
-        >
-        <input
-          type="text"
-          name="input_add_category_name"
-          id="input_add_category_name"
-          placeholder="Enter category name"
-        />
-        <button>Add Category</button>
-        <span>📋 Category List</span>
-        <table border="1">
-          <tr>
-            <th>#</th>
-            <th>Category Name</th>
-            <th>Actions</th>
-          </tr>
-        </table>
+    <main id="main">
+      <div id="add_category">
+        <div>
+          <h3>📂 Manage Categories</h3>
+          <label
+            for="input_add_category_name"
+            id="label_input_add_category_name"
+            >Category Name:</label
+          >
+          <input
+            type="text"
+            name="input_add_category_name"
+            id="input_add_category_name"
+            placeholder="Enter category name"
+          />
+          <button>Add Category</button>
+          <span>📋 Category List</span>
+          <table
+            border="1"
+            id="table_category"
+            style="
+              border-collapse: collapse;
+              border: 1px solid rgba(0, 0, 0, 0.077);
+            "
+          >
+            <tr>
+              <th>#</th>
+              <th>Category Name</th>
+              <th>Actions</th>
+            </tr>
+          </table>
+        </div>
       </div>
-    </div>
+      <div id="modal_confirm_delete" class="modal hidden">
+        <div class="modal-content">
+          <p>Are you sure you want to delete this category?</p>
+          <button id="confirm_delete_btn">Yes</button>
+          <button onclick="closeDeleteModal()">No</button>
+        </div>
+      </div>
+
+      <div id="modal_edit_category" class="modal hidden">
+        <div class="modal-content">
+          <label>Edit Category Name:</label>
+          <input type="text" id="edit_category_name" />
+          <button id="save_edit_btn">Save</button>
+          <button onclick="closeEditModal()">Cancel</button>
+        </div>
+      </div>
+    </main>
+
     <script src="../js/category_manage.js"></script>
   </body>
 </html>
