--- a/diary/html/add_article.html
+++ b/diary/html/add_article.html
@@ -18,7 +18,7 @@
       <label for="content">Content:</label>
       <input type="text" id="content" />
       <label for="article_image">Article Image:</label>
-      <input type="file" id="article_image" accept="image/*" />
+      <input type="file" id="article_image" accept="image/*" />//
       <img
         id="preview_image"
         src=""
